24.oct (ws)
      - fix #7653: crash when play panel is open with no score
23.oct (ws)
      - left align palette buttons text
      - mstyle: replaced pixmap operations with QImage as composite modes
        are only supported on X11 for pixmaps (did not work on OS-X)
22.oct (ws)
      - updates for "linked parts" implementation; synchronize line elements
20.oct (ws)
      - fixes for save/load style file (*.mss)
      - mark score dirty if synthesizer settings (mixer) are changed
19.oct (ws)
      - fix #7564: mouse note entry before a horizontal frame
18.oct (ws)
      - update of "styled" text implementation
17.oct (lv)
      - fix MusicXML import/export of clefs
      - fix #7504: test XML files crashing during playback
16.oct (ws)
      - fix #7538: edit text style dlg box: only changes to title are accepted
15.oct (ws)
      - stronger typing for BarLineType
      - fix #7497: adding parentheses to notes causes crash
      (lv)
      - #5637 support reading bww files: updated testfiles
14.oct (la)
      - fix #7520: Undo reorder instruments does not work as expected
      - fix #7519: Moving instrument causes crash
      (ws)
      - sync bar line changes with parts
      - sync key signature changes with parts
13.oct (ws)
      - replace clef number with clef name in msc[xz] files
      - stronger typing with ClefType
12.oct (ws)
      - fix #7479: png resolution preference ignored; command line option
        now overrides preference setting
      - fix #7468: Note change in part not updated in full score if in note
        entry mode
      (db)
      - Update mixer after Create > Instruments dialog (see #6505)
11.oct (ws)
      - fix #7461: appstyle-dark.css makes no distinction between active
        and disabled buttons
      - fix #7447: Lyrics deleted when changing note
10.oct (ws)
      - improved capella import
      (db)
      - fix local handbook disabled when no file is open
      - fix #7425: Space bar for play/pause (and zero for rests)